--- a/index1.html
+++ b/index1.html
@@ -70,9 +70,9 @@
 </div>
 <div class="col-lg-7 text-center text-lg-left">
 <h3 class="text-white font-weight-normal mb-3">I'm</h3>
-<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Kate Winslet</h1>
+<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Penghai Zhao</h1>
 <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-<div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
+<div class="typed-text d-none">CVer, AI Engineer, doctoral student</div>
 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
 <a href="" class="btn btn-outline-light mr-5">Download CV</a>
 <button type="button" class="btn-play" data-toggle="modal" data-src="#" data-target="#videoModal">
@@ -469,7 +469,7 @@
 </div>
 
 
-<div class="container-fluid py-5" id="contact">
+<!-- <div class="container-fluid py-5" id="contact">
 <div class="container">
 <div class="position-relative d-flex align-items-center justify-content-center">
 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
@@ -507,7 +507,7 @@ Message</button>
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 
 <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
@@ -532,6 +532,8 @@ Message</button>
 </div>
 </div>
 
+
+<a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
 
 <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
 
