--- a/index1.html
+++ b/index1.html
@@ -533,7 +533,7 @@ Message</button>
 </div>
 
 
-<a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
+<!-- <a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a> -->
 
 <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
 
