--- a/index.html
+++ b/index.html
@@ -241,15 +241,24 @@
 								</table>
 							</div>
 						</section> -->
-					
+						
+
+						<section class="box">
+							<h2>Visitor Location:</h2>
+							<div class="inner"><a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
+								<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
+							</div>
+						</section>
+
 					<!-- Copyright -->
 						<ul id="copyright">
 							<li>Personal Website</li>
+							<li></li>
 						</ul>
 
 				</div>
 
 		</div>
-
+		
 	</body>
 </html>
