--- a/awards.html
+++ b/awards.html
@@ -73,11 +73,7 @@
 										for <a href="http://html5up.net">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
 										repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
 									</p>
-									<p>
-										Striped is released for free under the <a href="http://html5up.net/license">Creative Commons Attribution license</a> so feel free to use it for personal projects
-										or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
-										<a href="http://html5up.net">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/n33co">Twitter</a> for new releases and updates.
-									</p>
+									<a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
 								</article>
 						
 							<!-- Post -->
@@ -241,7 +237,12 @@
 								</table>
 							</div>
 						</section> -->
-					
+						<section class="box">
+							<h2>Visitor Location:</h2>
+							<div class="inner"><a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
+								<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
+							</div>
+						</section>
 					<!-- Copyright -->
 						<ul id="copyright">
 							<li>Personal Website</li>
