--- a/awards.html
+++ b/awards.html
@@ -71,8 +71,6 @@
 										<li>2021, 首届中国图像图形学报研究生学术论坛报告, 国家学会级优秀奖</li>
 										<li>2021, 第二届全国高校计算机能力挑战赛, 省级二等奖</li>
 										<li>2020, “互联网+”大学生创新创业大赛, 校级一等奖</li>
-										<li>2021, 西北民族大学学业奖学金, 校级二等奖</li>
-										<li>2020, 西北民族大学第十二届研究生数学建模竞赛, 校级三等奖</li>
 									</ul>
 									
 								</article>
@@ -111,8 +109,10 @@
 
 						<section class="box">
 							<h2>Visitor Location:</h2>
-							<div class="inner"><a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
-								<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
+							<div class="inner">
+								<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y"></script>
+								<!-- <a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
+								<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a> -->
 							</div>
 						</section>
 					<!-- Copyright -->
