--- a/publications.html
+++ b/publications.html
@@ -274,8 +274,10 @@
 							</section> -->
 							<section class="box">
 								<h2>Visitor Location:</h2>
-								<div class="inner"><a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
-									<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
+								<div class="inner">
+									<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y"></script>
+									<!-- <a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
+									<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a> -->
 								</div>
 							</section>
 						<!-- Copyright -->
