--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@
 <html>
 	<head>
 		<title>Penghai Zhao</title>
+		<link rel="icon" href="images\bitbug_favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="images\bitbug_favicon.ico" type="image/x-icon">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
