--- a/projects.html
+++ b/projects.html
@@ -62,12 +62,12 @@
 										<!--
 											Note: You can change the number of list items in "stats" to whatever you want.
 										-->
-										<ul class="stats">
+										<!-- <ul class="stats">
 											<li><a href="#" class="icon fa-comment">2</a></li>
-											<!-- <li><a href="#" class="icon fa-heart"></a></li> -->
-											<!-- <li><a href="#" class="icon fa-twitter">64</a></li>
-											<li><a href="#" class="icon fa-facebook">128</a></li> -->
-										</ul>
+											<li><a href="#" class="icon fa-heart"></a></li> 
+											<li><a href="#" class="icon fa-twitter">64</a></li>
+											<li><a href="#" class="icon fa-facebook">128</a></li> 
+										</ul> -->
 									</div>
 									<!-- <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a> -->
 									<ul>
