--- a/awards.html
+++ b/awards.html
@@ -61,12 +61,12 @@
 										<!--
 											Note: You can change the number of list items in "stats" to whatever you want.
 										-->
-										<ul class="stats">
-											<!-- <li><a href="#" class="icon fa-comment">16</a></li> -->
+										<!-- <ul class="stats">
+											<li><a href="#" class="icon fa-comment">16</a></li> 
 											<li><a href="#" class="icon fa-heart">6</a></li>
-											<!-- <li><a href="#" class="icon fa-twitter">64</a></li>
-											<li><a href="#" class="icon fa-facebook">128</a></li> -->
-										</ul>
+											 <li><a href="#" class="icon fa-twitter">64</a></li>
+											<li><a href="#" class="icon fa-facebook">128</a></li>
+										</ul> -->
 									</div>
 									<ul>
 										<li>2020, 全国大学生英语竞赛(NECCS), 国家级一等奖</li>
