--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 											if they get too long. You can also remove the <p> entirely if you don't
 											need a subtitle.
 										-->
-										<h2><a href="#">I'm Penghai Zhao||我是赵鹏海</a></h2> 
-										<p>A doctoral student @ NKU majoring in CV&PR</p>
+										<h2><a href="#">I'm Penghai Zhao | 我是赵鹏海</a></h2> 
+										<p>CVer & Computer Engineer</p>
 									</header>
 									<div class="info">
 										<!--
@@ -74,7 +74,6 @@
 										I recevied B.S. degree in software engineering from <a href="https://www.haust.edu.cn/">Henan University of Science and Technology</a>, China, in 2019. And now,
 										I am currently a doctoral student in <a href="https://www.nankai.edu.cn/">Nankai University</a> My main research interests include image processing, pattern recognition, <i>etc</i>.
 									</p>
-\
 								</article>
 						
 
