--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 											the entire "date" element.
 											
 										-->
-										<span class="date"></span>
+										<!-- <span class="date"></span> -->
 										<!--
 											Note: You can change the number of list items in "stats" to whatever you want.
 										-->
