--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
 									</div>
 									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 									<p>
-										I recevied B.S. degree in software engineering from <a href="https://www.haust.edu.cn/">Henan University of Science and Technology</a>, China, in 2019. And now,
-										I am currently a doctoral student in <a href="https://www.nankai.edu.cn/">Nankai University</a> My main research interests include image processing, pattern recognition, <i>etc</i>.
+										I recevied B.S. degree in software engineering from <a href="https://www.haust.edu.cn/">Henan University of Science and Technology</a>, China, in 2019. 
+										Since then, I majored in Computer Vision and Pattern Recognition (AKA CVPR) as a postgraduate student.
+										And now,I am currently a doctoral student in <a href="https://www.nankai.edu.cn/">Nankai University</a>. 
+										My main research interests include image processing, pattern recognition, network architecture design, <i>etc</i>.
 									</p>
 								</article>
 						
