--- a/projects.html
+++ b/projects.html
@@ -114,9 +114,9 @@
 						<section class="box">
 							<h2>Visitor Location:</h2>
 							<div class="inner">
-								<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y"></script>
-								<!-- <a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
-								<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a> -->
+								<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y"></script> -->
+								<a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker">
+								<img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
 							</div>
 						</section>
 					<!-- Copyright -->
