--- a/awards.html
+++ b/awards.html
@@ -68,7 +68,7 @@
 											<li><a href="#" class="icon fa-facebook">128</a></li>
 										</ul> -->
 									</div>
-									<ol>
+									<ol id="my_list">
 										<li>2020, 全国大学生英语竞赛(NECCS), 国家级一等奖</li>
 										<li>2021, 首届中国图像图形学报研究生学术论坛报告, 国家学会级优秀奖</li>
 										<li>2021, 第二届全国高校计算机能力挑战赛, 省级二等奖</li>
