--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
 					
 						<!-- Nav -->
 						<nav id="nav">
-							<ul>
+							<ul id="my_list">
 								<li><a href="index.html">About Me</a></li>
 								<li><a href="publications.html">Publications</a></li>
 								<li class="current"><a href="projects.html">Projects</a></li>
