--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
 										And now,I am currently a doctoral student in <a href="https://www.nankai.edu.cn/">Nankai University</a>. 
 										My main research interests include image processing, pattern recognition, network architecture design, <i>etc</i>.
 									</p>
+									<p>
+										2022.9.21 写给我的师弟师妹们 是不是不知道发生了什么？不是说好的要转账么？很不幸的告诉你，当你完成扫码的那一刻你就已经被诈骗了。或许你以前觉得你自己很是防范这些事情，but here we come...
+										既然你看到了这个消息，也知道了自己被骗了，所以真的是要加强防范了！我不希望你们辛苦工作好几年的积蓄都像这样付之一炬，一定要保护好自己努力的成果~我不会推荐你们下载什么国家反（jian）诈（kong）中心，
+										但是希望你们能看完下面的这个视频吧~ 哦对了，你们的访问记录可以在左侧的那个Visitor Location看到哦~你们可以自己看看，看看信息是不是又暴露了~
+										
+
+									</p>
+									<iframe src="//player.bilibili.com/player.html?aid=460870213&bvid=BV195411T7d4&cid=346522975&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 								</article>
 						
 
