--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									</p>
 									<p>
 										2022.9.21 写给我的师弟师妹们 是不是不知道发生了什么？不是说好的要转账么？很不幸的告诉你，当你完成扫码的那一刻你就已经被诈骗了。或许你以前觉得你自己很是防范这些事情，but here we come...
-										既然你看到了这个消息，也知道了自己被骗了，所以真的是要加强防范了！你看我们才认识了没有几天，没有面基lol也没有什么太多的沟通，我凭借简历加短短几天的了解就把你们骗过来，不敢想象专业的诈骗分子会用什么手段。
+										既然你看到了这个消息，也知道了自己被骗了，所以真的是要加强防范了！你看我凭借很有限的一些信息就把你们骗过来，不敢想象专业的诈骗分子会用什么手段。
 										你们现在必须已经默认自己的信息被全部泄露了，只有这样才能提高防范意识！我不希望你们辛苦工作好几年的积蓄都像这样付之一炬，一定要保护好自己努力的成果~我不会推荐你们下载什么国家反（jian）诈（kong）中心，
 										但是希望你们能看完下面的这个视频吧~ 哦对了，你们的访问记录可以在左侧的（也可能是下拉框里的）那个Visitor Location看到哦~你们可以自己看看，看看信息是不是又暴露了哈哈~
 										
