--- a/awards.html
+++ b/awards.html
@@ -73,6 +73,7 @@
 										<li>2021, 首届中国图像图形学报研究生学术论坛报告, 国家学会级优秀奖</li>
 										<li>2021, 第二届全国高校计算机能力挑战赛, 省级二等奖</li>
 										<li>2020, “互联网+”大学生创新创业大赛, 校级一等奖</li>
+										<li>2022, 《乌金体藏文文档版面分析与识别系统》，优秀毕业论文</li>
 									</ol>
 									
 								</article>
