--- a/awards.html
+++ b/awards.html
@@ -74,6 +74,7 @@
 										<li>2021, 第二届全国高校计算机能力挑战赛, 省级二等奖</li>
 										<li>2020, “互联网+”大学生创新创业大赛, 校级一等奖</li>
 										<li>2022, 《乌金体藏文文档版面分析与识别系统》，优秀毕业论文</li>
+										<li>2022, 粤港澳大湾区算法算例大赛-古籍文档识别赛道，全国第三名（奖金4万元）</li>
 									</ol>
 									
 								</article>
