--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,7 @@
 																			<li><a href="#" class="icon fa-facebook">128</a></li>
 																		</ul> -->
 									</div>
-									<a href="#" class="image featured"><img src="images/uchen_system.png" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/system.gif" alt="" /></a>
 									<p>
 										As a common font of Tibetan, Uchen is widely used in various kinds of Tibetan document at different times. In recent
 										years, ongoing digitalization imposes increasing demands on automated optical character recognition which makes Uchen
@@ -97,7 +97,7 @@
 										design philosophy of ‘high coheres, low coupling’, this thesis uses PyQT5, OpenCV, and Pytorch to complete the
 										development of the stable and flexible system. The binarization, layout analysis, and recognition functions can perform
 										well during the software tests which satisfy the practical requirements.
-										See more at <a href="https://kns.cnki.net/kcms2/article/abstract?v=3uoqIhG8C475KOm_zrgu4lQARvep2SAke-wuWrktdE-tSIT2YIbQ2DyIttZrwdyOjo5Mq2NXe6fFtYSrVhzbXS2Hk0dXu74t&src=copy">[1]赵鹏海. 乌金体藏文文档版面分析与识别系统[D].西北民族大学,2022.DOI:10.27408/d.cnki.gxmzc.2022.000367.</a>
+										See more at <a href="https://kns.cnki.net/kcms2/article/abstract?v=3uoqIhG8C475KOm_zrgu4lQARvep2SAke-wuWrktdE-tSIT2YIbQ2DyIttZrwdyOjo5Mq2NXe6fFtYSrVhzbXS2Hk0dXu74t&src=copy">《乌金体藏文文档版面分析与识别系统》</a>
 									</p>
 								</article>
 
