--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 											<li><a href="#" class="icon fa-facebook">128</a></li>
 										</ul> -->
 									</div>
-									<!-- <a href="#" class="image featured"><img src="images/pic01.jpg" alt="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right)." title="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right)." /></a> -->
-									<figure>
+									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right)." title="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right)." /></a>
+									<!-- <figure>
 										<img src="images/pic01.jpg" alt="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right).">
 										<figcaption>This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right).</figcaption>
-									</figure>
+									</figure> -->
 									<p>
 										I recevied B.S. degree in software engineering from <a href="https://www.haust.edu.cn/">Henan University of Science and Technology</a>, China, in 2019. 
 										Since then, I majored in Computer Vision and Pattern Recognition (AKA CVPR) as a postgraduate student.
