--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
 																			if they get too long. You can also remove the <p> entirely if you don't
 																			need a subtitle.
 																		-->
-										<h2><a href="#">Uchen Document Layout Analysis and Recognition System</a></h2>
+										<h2><a href="https://kns.cnki.net/kcms2/article/abstract?v=3uoqIhG8C475KOm_zrgu4lQARvep2SAke-wuWrktdE-tSIT2YIbQ2DyIttZrwdyOjo5Mq2NXe6fFtYSrVhzbXS2Hk0dXu74t&src=copy">Uchen Document Layout Analysis and Recognition System</a></h2>
 										<p>Penghai Zhao</p>
 										<p>乌金体藏文文档版面分析与识别系统（优秀硕士毕业论文）</p>
 									</header>
@@ -114,29 +114,14 @@
 											if they get too long. You can also remove the <p> entirely if you don't
 											need a subtitle.
 										-->
-										<h2><a href="#">Alleviating pseudo-touching in attention U-Net-based binarization approach for the historical Tibetan document images</a></h2> 
+										<h2><a href="https://link.springer.com/article/10.1007/s00521-021-06512-7">Alleviating pseudo-touching in attention U-Net-based binarization approach for the historical Tibetan document images</a></h2> 
 										<p>P Zhao, W Wang, G Zhang, Y Lu</p>
 										<p>Neural Computing and Applications</p>
 									</header>
 									<div class="info">
-										<!--
-											Note: The date should be formatted exactly as it's shown below. In particular, the
-											"least significant" characters of the month should be encapsulated in a <span>
-											element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-											Oh, and if you don't need a date for a particular page or post you can simply delete
-											the entire "date" element.
-											
-										-->
+
 										<span class="date"><span class="month">2021<span>y</span></span> <span class="day">Oct</span></span>
-										<!--
-											Note: You can change the number of list items in "stats" to whatever you want.
-										-->
-										<!-- <ul class="stats">
-											<li><a href="#" class="icon fa-comment">16</a></li>
-											<li><a href="#" class="icon fa-heart">32</a></li>
-											<li><a href="#" class="icon fa-twitter">64</a></li>
-											<li><a href="#" class="icon fa-facebook">128</a></li>
-										</ul> -->
+
 									</div>
 									<a href="#" class="image featured"><img src="images/u-net.png" alt="" /></a>
 									<p class="align-justify">
@@ -151,7 +136,7 @@
 											if they get too long. You can also remove the <p> entirely if you don't
 											need a subtitle.
 										-->
-										<h2><a href="#">Accurate fine-grained layout analysis for the historical Tibetan document based on the instance segmentation</a></h2> 
+										<h2><a href="https://ieeexplore.ieee.org/abstract/document/9615155/">Accurate fine-grained layout analysis for the historical Tibetan document based on the instance segmentation</a></h2> 
 										<p>P Zhao, W Wang, Z Cai, G Zhang, Y Lu</p>
 										<p>IEEE <i>Access</i></p>
 									</header>
