--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,39 @@
 					<div id="content">
 						<div class="inner">
 					
+
+								<article class="box post post-excerpt">
+									<header>
+										<h2><a href="https://arxiv.org/abs/2408.03934">From Words to Worth: Newborn Article Impact Prediction with LLM</a></h2>
+										<p>Penghai Zhao, Qinghua Xing, Kairan Dou, Jinyu Tian, Ying Tai, Jian Yang, Ming-Ming Cheng, Xiang Li</p>
+										<p>arXiv pre-print</p>
+									</header>
+									<div class="info">
+
+										<span class="date"><span class="month">2024<span>y</span></span> <span class="day">Aug</span></span>
+
+									</div>
+									<a href="#" class="image featured"><img src="images/aip.png" alt="" /></a>
+									<p class="align-justify">
+										As the academic landscape expands, the challenge of efficiently identifying potentially high-impact articles among the vast number of newly published works becomes critical. This paper introduces a promising approach, leveraging the capabilities of fine-tuned LLMs to predict the future impact of newborn articles solely based on titles and abstracts. Moving beyond traditional methods heavily reliant on external information, the proposed method discerns the shared semantic features of highly impactful papers from a large collection of title-abstract and potential impact pairs. These semantic features are further utilized to regress an improved metric, TNCSI_SP, which has been endowed with value, field, and time normalization properties. Additionally, a comprehensive dataset has been constructed and released for fine-tuning the LLM, containing over 12,000 entries with corresponding titles, abstracts, and TNCSI_SP. The quantitative results, with an NDCG@20 of 0.901, demonstrate that the proposed approach achieves state-of-the-art performance in predicting the impact of newborn articles when compared to competitive counterparts. Finally, we demonstrate a real-world application for predicting the impact of newborn journal articles to demonstrate its noteworthy practical value. Overall, our findings challenge existing paradigms and propose a shift towards a more content-focused prediction of academic impact, offering new insights for assessing newborn article impact.
+									</p>
+								</article>
+
+								<article class="box post post-excerpt">
+									<header>
+										<h2><a href="https://arxiv.org/abs/2402.12928">A Literature Review of Literature Reviews in Pattern Analysis and Machine Intelligence</a></h2>
+										<p>Penghai Zhao, Xin Zhang, Ming-Ming Cheng, Jian Yang, Xiang Li</p>
+										<p>arXiv pre-print</p>
+									</header>
+									<div class="info">
+										<span class="date"><span class="month">2024<span>y</span></span> <span class="day">Feb</span></span>
+									</div>
+									<a href="#" class="image featured"><img src="images/ripami.png" alt="" /></a>
+									<p class="align-justify">
+           								Recent advancements in artificial intelligence and computational methods have propelled significant progress in the Pattern Analysis and Machine Intelligence (PAMI) field, spawning a proliferation of diverse knowledge. Within this rapidly expanding body of knowledge, literature reviews play a crucial role in synthesizing fragmented information, offering researchers a comprehensive understanding of the investigated topic and thus earning widespread recognition for their value. In this study, we examine and synthesize literature reviews within the PAMI field. Beginning with a narrative overview, we highlight common preferences adopted by authors when composing PAMI reviews. Following this, we provide a statistical analysis of these preferences and other data on the RiPAMI , a database containing over 3,000 reviews. Furthermore, we introduce a set of bibliometric indicators designed to assess several key aspects, such as the impact of literature reviews and the quality of their references. Statistical bibliometrics analysis of the RiPAMI reveals a positive correlation between the reference quality and academic impact. Meanwhile, an analysis of AI-generated review samples uncovers a critical limitation: their difficulty in evaluating the academic value of newly published articles undermines their ability to identify cutting-edge research compared to human-authored reviews. Finally, we discuss how the proposed bibliometrics indicators can assist researchers in managing the growing volume of literature reviews and offering valuable insights into current challenges and future directions for literature reviews in PAMI.
+									</p>
+								</article>
+
 							<!-- Post -->
 								<article class="box post post-excerpt">
 									<header>
@@ -186,12 +219,7 @@
 							</ul>
 						</nav>
 
-						<!-- Search -->
-							<!-- <section class="box search">
-								<form method="post" action="#">
-									<input type="text" class="text" name="search" placeholder="Search" />
-								</form>
-							</section> -->
+
 					
 						<!-- Text -->
 							<section class="box text-style1">
