--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 											need a subtitle.
 										-->
 										<h2><a href="#">I'm Penghai Zhao | 我是赵鹏海</a></h2> 
-										<p>CVer & Computer Engineer</p>
+										<p>Major Interests: CV, NLP, Software Engineering, AI for Researchers</p>
 									</header>
 									<div class="info">
 										<!--
@@ -75,10 +75,8 @@
 										<figcaption>This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right).</figcaption>
 									</figure> -->
 									<p>
-										I recevied B.S. degree in software engineering from <a href="https://www.haust.edu.cn/">Henan University of Science and Technology</a>, China, in 2019. 
-										Since then, I majored in Computer Vision and Pattern Recognition (AKA CVPR) as a postgraduate student.
-										And now,I am currently a doctoral student in <a href="https://www.nankai.edu.cn/">Nankai University</a>. 
-										My main research interests include image processing, pattern recognition, network architecture design, <i>etc</i>.
+
+										Zhaopenghai was born in Zhengzhou, China. He obtained his Bachelor's and Master's degrees in 2019 and 2022, respectively. Now, he is an Eng.D. candidate at VCIP, the Department of Computer Science, <a href="https://www.nankai.edu.cn/">Nankai University</a>, China. His areas of expertise encompass computer vision, natural language processing, software engineering, alongside a particular focus on AI for researchers.
 									</p>
 								</article>
 						
