--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 											<li><a href="#" class="icon fa-facebook">128</a></li>
 										</ul> -->
 									</div>
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right)." title="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right)." /></a>
+									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="In New-Zealand with his wife." width="50%"  /></a>
 									<!-- <figure>
 										<img src="images/pic01.jpg" alt="This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right).">
 										<figcaption>This is a photo featuring me (on the left) and my supervisor Li Xiang (on the right).</figcaption>
