--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,9 @@
 									<!-- <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a> -->
 									<ol>
 										
-										<li>乌金体藏文古籍文档分析与识别研究.国家自然科学基金项目(No.61772430), 2018.1-2021.12, 主持人:王维兰.</li>
-										<li>藏文古籍文档图像识别系统集成开发.西北民族大学研究生创新团队项目(Yxm2021002), 2021.3-2022.3, 主持人:赵鹏海.</li>
-										<li>减论, 2024.6- , 负责人:赵鹏海.</li>
+										<li>乌金体藏文古籍文档分析与识别研究.国家自然科学基金项目(No.61772430), 2018.1 - 2021.12, 主持人:王维兰.</li>
+										<li>藏文古籍文档图像识别系统集成开发.西北民族大学研究生创新团队项目(Yxm2021002), 2021.3 - 2022.3, 主持人:赵鹏海.</li>
+										<li>减论, 2024.6 - present, 负责人:赵鹏海.</li>
 									</ol>
 								</article>
 						</div>
