--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
 										<h2><a href="#">I'm Penghai Zhao | 我是赵鹏海</a></h2> 
 										<p>Major Interests: CV, NLP, Software Engineering, AI for Researchers</p>
 									</header>
+
 									<div class="info">
-										<!--
+										<!-- <span class="date"><span class="month">1997<span>y</span></span> <span class="day">Sep</span></span> -->
+										<a href="#" class="icon fa-user" style="font-size: 50px; display: block; margin: 0 auto; text-align: center;"></a>
+
+										<!--<i class="fa-solid fa-graduation-cap"></i><i class="fas fa-user-graduate"></i>
 											Note: The date should be formatted exactly as it's shown below. In particular, the
 											"least significant" characters of the month should be encapsulated in a <span>
 											element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
@@ -115,7 +119,6 @@
 						<section class="box">
 							<h2>Visitor Location:</h2>
 							<div class="inner">
-								<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y"></script> -->
 								<a href="https://clustrmaps.com/site/1bpnd"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=_UKrF0agNP06IRETu_e68t2tf8MVKjRd5gAUO7sHk_Y&cl=ffffff" /></a>
 							</div>
 						</section>
