--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,17 @@
 	<!--
 		Note: Set the body element's class to "left-sidebar" to position the sidebar on the left.
 		Set it to "right-sidebar" to, you guessed it, position it on the right.
+		fa-file-text (\f15c): 这个图标通常代表文档、文章或文本文件，非常适合表示论文或其他文献类型的内容。
+
+fa-file-o (\f016): 这个图标代表一个空白文件，可以用来表示任何类型的文件或文档。
+
+fa-book (\f02d): 这个图标代表一本书，通常用于表示书籍、文献、教材等，也可以代表论文或研究材料。
+
+fa-newspaper-o (\f1ea): 这个图标代表报纸，适合表示新闻、文章、期刊或其他类似的媒体内容。
+
+fa-clipboard (\f0ea): 这个图标代表一个夹子或写字板，通常用于表示草稿、文档或笔记。
+
+fa-file-pdf-o (\f1c1): 这个图标专门用于表示 PDF 文件，可以用来代表论文、文档或研究材料等以 PDF 格式存在的内容。
 	-->
 	<body class="left-sidebar">
 
@@ -52,9 +63,7 @@
 										<p>arXiv pre-print</p>
 									</header>
 									<div class="info">
-
 										<span class="date"><span class="month">2024<span>y</span></span> <span class="day">Aug</span></span>
-
 									</div>
 									<a href="#" class="image featured"><img src="images/aip.png" alt="" /></a>
 									<p class="align-justify">
